--- a/MRM/Views/MasterList/MasterList.cshtml
+++ b/MRM/Views/MasterList/MasterList.cshtml
@@ -10,9 +10,16 @@
 <head>
     <meta name="viewport" content="width=device-width" />
    
-   <style type="text/css">
-       padding{
-        padding:4px;
+    <style>
+        fieldset {
+            border: 1px solid #DDD;
+            padding: 0 1.4em 1.4em 1.4em;
+            margin: 25px 0 1.5em 0;
+        }
+
+        legend {
+            font-size: 1.2em;
+            font-weight: bold;
         }
     </style>
 </head>
@@ -20,62 +27,75 @@
     <div>
         @using (Html.BeginForm("MasterList", "MasterList", FormMethod.Post))
         {
-            <h4>Master Campaigning Details</h4>
-            <hr />
-            <div class="table-responsive">
-                <table cellpadding="0" cellspacing="0" class="table table-bordered">
-                    <thead class="header-background-color">
-                        <tr>
-                            <th>ID</th>
-                            <th>Name</th>
-                            <th>Campaign Desc.</th>
-                            <th>Status</th>
-                            <th>Start Date</th>
-                            <th>End Date</th>
-
-                        </tr>
-                    </thead>
-                    @foreach (var item in Model.MasterCampaigns)
-                {
-                        <tbody>
+            <fieldset>
+                <legend>Master Campaigning Details</legend>
+                <div class="table-responsive">
+                    <table cellpadding="0" cellspacing="0" class="table table-bordered">
+                        <thead class="header-background-color">
                             <tr>
-                                <td>@item.Id</td>
-                                <td>@item.Name</td>
-                                <td>@item.CampaignDescription</td>
-                                <td>@item.Status</td>
-                                <td>@item.StartDate</td>
-                                <td>@item.EndDate</td>
+                                <th>ID</th>
+                                <th>Name</th>
+                                <th>Campaign Desc.</th>
+                                <th>Status</th>
+                                <th>Start Date</th>
+                                <th>End Date</th>
+
                             </tr>
-                        </tbody>
-                    }
-                </table>
-                </div>
-                <br />
-                <table cellpadding="0" cellspacing="0">
-                    <tr>
-                        @for (int i = 1; i <= Model.PageCount; i++)
-                        {
-                            <td class="td-padding">
-                                @if (i != Model.CurrentPageIndex)
-                                {
-                                    <a href="javascript:PagerClick(@i);">@i</a>
-                                }
-                                else
-                                {
-                                    <span>@i</span>
-                                }
-                            </td>
+                        </thead>
+                        @foreach (var item in Model.MasterCampaigns)
+                {
+                            <tbody>
+                                <tr>
+                                    <td>@item.Id</td>
+                                    <td>@Html.ActionLink((item.Name), "ChildListById", "ChildList", new { Id = item.Id }, null)</td>
+                                    <td>@item.CampaignDescription</td>
+                                    <td>@item.Status</td>
+                                    <td>@item.StartDate</td>
+                                    <td>@item.EndDate</td>
+                                </tr>
+                            </tbody>
                         }
-                    </tr>
-                </table>
-                <input type="hidden" id="hfCurrentPageIndex" name="currentPageIndex" />
-                }
+                    </table>
+                </div>
+               
+                <div class="row" style="padding-top:10px">
+                    <div class="col-md-11">
+                        <table cellpadding="0" cellspacing="0">
+                            <tr>
+                                @for (int i = 1; i <= Model.PageCount; i++)
+                                {
+                                    <td class="td-padding">
+                                        @if (i != Model.CurrentPageIndex)
+                                        {
+                                            <a href="javascript:PagerClick(@i);">@i</a>
+                                        }
+                                        else
+                                        {
+                                            <span>@i</span>
+                                        }
+                                    </td>
+                                }
+                            </tr>
+                        </table>
+                        <input type="hidden" id="hfCurrentPageIndex" name="currentPageIndex" />
+                    </div>
+                    <div class="col-md-1">
+                        <input type="button" class="btn btn-block btn-primary btn-lg" value="Back" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" style="width: 180%;height: 40px;margin-left: -85%;" />
+
+                    </div>
+                </div>
+            </fieldset>
+        }
+
                 <script type="text/javascript">
-                    function PagerClick(index) {
+                    function PagerClick(index)
+                    {
                         document.getElementById("hfCurrentPageIndex").value = index;
                         document.forms[0].submit();
                     }
+
                 </script>
             </div>
 </body>
 </html>
+
