--- a/MRM/Views/MasterCampaign/Index.cshtml
+++ b/MRM/Views/MasterCampaign/Index.cshtml
@@ -13,22 +13,28 @@
         
     </fieldset>
     <fieldset>
+        @if (TempData["mastercount"].ToString() != "")
+        {
+            <div class="row alert alert-danger">
+                <strong>Danger!</strong> @TempData["mastercount"].ToString()
+            </div>
+        }
         <div class="row" style="padding-top:15px">
             <div class="col-md-3"><label>Master Campaign</label></div>
             <div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Create" onclick="location.href='@Url.Action("MasterCampaign", "MasterCampaign")'" /></div>
-            <div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Edit" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" /></div>
+            @*<div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Edit" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" /></div>*@
             <div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="View All" onclick="location.href='@Url.Action("MasterList", "MasterList")'" /></div>
         </div>
         <div class="row">
             <div class="col-md-3"><label>Sub Campaign</label></div>
             <div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Create" onclick="location.href='@Url.Action("ChildCampaign", "ChildCampaign")'" /></div>
-            <div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Edit" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" /></div>
+            @*<div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Edit" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" /></div>*@
             <div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="View All" onclick="location.href='@Url.Action("ChildList", "ChildList")'" /></div>
         </div>
         <div class="row">
             <div class="col-md-3"><label>Tactic</label></div>
             <div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Create" onclick="location.href='@Url.Action("TacticCampaign", "TacticCampaign")'" /></div>
-            <div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Edit" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" /></div>
+            @*<div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Edit" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" /></div>*@
             <div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="View All" onclick="location.href='@Url.Action("TacticList", "TacticList")'" /></div>
         </div>
     </fieldset>
@@ -48,6 +54,12 @@
     .btnpadding {
     padding-top:10px;
     }
+
+.jumbotron {
+   
+     line-height: 1 !important; 
+  
+}
 </style>
 
 
