--- a/MRM/Views/MasterCampaign/MasterCampaign.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaign.cshtml
@@ -93,30 +93,51 @@
                                         <label>End Date</label>
                                         @Html.TextBox("d", new { @class = "form-control" })
                                 </div>                             
-                                <div class="col-md-6 form-group" style="margin-left:-14px">
+                                @*<div class="col-md-6 form-group" style="margin-left:-14px">
                                     <label>Start Date</label>
-                                    @Html.TextBoxFor(m => m.StartDate, new { @class = "form-control", @onchange= "esd()" })
+                                    @Html.TextBoxFor(m => m.StartDate, new { @class = "form-control" })
+                                </div>*@
+
+
+                                <div class='col-sm-6' style="margin-left:-14px">
+                                    <div class="form-group">
+                                        <label>Start Date</label>
+                                        <div class='input-group date' id='StartDate'>
+                                            @Html.TextBoxFor(m => m.StartDate, new { @maxlength = "10", @class = "form-control" })
+                                            <span class="input-group-addon">
+                                                <span class="glyphicon glyphicon-calendar"></span>
+                                            </span>
+                                        </div>
+                                    </div>
                                 </div>
-                                    <div class="col-md-6 form-group" style="margin-left:-14px">
+                                <div class='col-sm-6' style="margin-left:-14px">
+                                    <div class="form-group">
                                         <label>End Date</label>
-                                        @Html.TextBoxFor(m => m.EndDate, new { @class = "form-control" })
-                                    </div>                               
+                                        <div class='input-group date' id='EndDate'>
+                                            @Html.TextBoxFor(m => m.EndDate, new { @maxlength = "10", @class = "form-control" })
+                                            <span class="input-group-addon">
+                                                <span class="glyphicon glyphicon-calendar"></span>
+                                            </span>
+                                        </div>
+                                    </div>
+                                </div>
+                            
                                 <div class="form-group">
                                     <label>Status</label>
                                     @Html.DropDownListFor(m => m.Status, new List<SelectListItem>
                                      {
-                                        new SelectListItem{ Text="Saved draft", Value = "0" },
-                                        new SelectListItem{ Text="Saved draft1", Value = "1" }
+                                        new SelectListItem{ Text="Partial", Value = "0" },
+                                        new SelectListItem{ Text="Complete", Value = "1" }
                                      }, new { @class = "form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Master Campaign*</label>
-                                    @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+                                    @Html.TextBoxFor(m => m.Name, new { @maxlength = "25", @class = "form-control" })
                                 </div>                               
                                 <!-- /.form-group -->
                                 <div class="form-group">
                                     <label>Master Campaign Description</label>
-                                    @Html.TextBoxFor(m => m.CampaignDescription, new { @class = "form-control" })
+                                    @Html.TextAreaFor(m => m.CampaignDescription, new { @class = "form-control" })
                                 </div>
                             </div>
                             <!--Upper code /.col -->
@@ -125,13 +146,13 @@
                     </fieldset>
                     <fieldset>
                         <div class="row" style="padding-top:10px">
-                            <div class="col-md-6">
+                            <div class="col-md-9">
                             </div>
-                            <div class="col-md-6">
-                                <div class="col-md-3">
+                            <div class="col-md-3">
+                                <div class="col-md-6">
                                     <input type="button" class="btn btn-block btn-primary btn-lg" value="Back" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" />
                                 </div>
-                                <div class="col-md-3">
+                                <div class="col-md-6">
                                     <button Id="btnsubmit" class="btn btn-block btn-primary btn-lg">Submit</button>
                                 </div>
                             </div>
