--- a/MRM/Views/MasterList/MasterList.cshtml
+++ b/MRM/Views/MasterList/MasterList.cshtml
@@ -49,7 +49,7 @@
                                     <td>@item.Id</td>
                                     <td>@Html.ActionLink((item.Name), "ChildListById", "ChildList", new { Id = item.Id }, null)</td>
                                     <td>@item.CampaignDescription</td>
-                                    <td>@item.Status</td>
+                                    <td>@(item.Status=="0"?"Partial":"Complete")</td>
                                     <td>@item.StartDate</td>
                                     <td>@item.EndDate</td>
                                 </tr>
