UI title name changed

--- a/MRM/Views/ChildList/ChildList.cshtml
+++ b/MRM/Views/ChildList/ChildList.cshtml
@@ -27,7 +27,7 @@
         @using (Html.BeginForm("ChildList", "ChildList", FormMethod.Post))
         {
             <fieldset>
-                <legend>Child Campaigning Details </legend>
+                <legend>Child Campaign Details </legend>
                 <div class="table-responsive">
                     <table cellpadding="0" cellspacing="0" class="table table-bordered">
                         <thead class="header-background-color">
