--- a/MRM/Views/MasterList/MasterList.cshtml
+++ b/MRM/Views/MasterList/MasterList.cshtml
@@ -28,7 +28,7 @@
         @using (Html.BeginForm("MasterList", "MasterList", FormMethod.Post))
         {
             <fieldset>
-                <legend>Master Campaigning Details</legend>
+                <legend>Master Campaign Details</legend>
                 <div class="table-responsive">
                     <table cellpadding="0" cellspacing="0" class="table table-bordered">
                         <thead class="header-background-color">
