--- a/MRM/Views/TacticList/TacticList.cshtml
+++ b/MRM/Views/TacticList/TacticList.cshtml
@@ -27,7 +27,7 @@
         @using (Html.BeginForm("TacticList", "TacticList", FormMethod.Post))
         {
             <fieldset>
-                <legend>Tactic Campaigning Details</legend>
+                <legend>Tactic Details</legend>
                 <div class="table-responsive">
                     <table cellpadding="0" cellspacing="0" class="table table-bordered">
                         <thead class="header-background-color">
