--- a/MRM/Views/TacticList/TacticList.cshtml
+++ b/MRM/Views/TacticList/TacticList.cshtml
@@ -48,7 +48,7 @@
                                     <td>@item.Id</td>
                                     <td>@item.Name</td>
                                     <td>@item.TacticDescription</td>
-                                    <td>@(item.Status == "0" ? "Partial" : "Complete")</td>
+                                    <td>@item.Status</td>
                                     <td>@item.StartDate</td>
                                     <td>@item.EndDate</td>
                                 </tr>
