--- a/MRM/Views/MasterCampaign/MasterCampaign.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaign.cshtml
@@ -126,8 +126,8 @@
                                     <label>Status</label>
                                     @Html.DropDownListFor(m => m.Status, new List<SelectListItem>
                                      {
-                                        new SelectListItem{ Text="Partial", Value = "0" },
-                                        new SelectListItem{ Text="Complete", Value = "1" }
+                                        new SelectListItem{ Text="Partial" },
+                                        new SelectListItem{ Text="Complete" }
                                      }, new { @class = "form-control" })
                                 </div>
                                 <div class="form-group">
