--- a/MRM/Content/bootstrap.css
+++ b/MRM/Content/bootstrap.css
@@ -194,6 +194,7 @@ input[type="checkbox"],
 input[type="radio"] {
   padding: 0;
   box-sizing: border-box;
+  width: 15%;
 }
 
 input[type="search"] {
@@ -332,6 +333,7 @@ input,
 select[multiple],
 textarea {
   background-image: none;
+      width: 211%;
 }
 
 a {
