--- a/MRM/Views/MasterCampaign/MasterCampaign.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaign.cshtml
@@ -5,6 +5,12 @@
     ViewBag.Title = "MasterCampaign";
    // var val = Json.Encode(Model);
 }
+
+@*<link href="~/Content/bootstrap.min.css" rel="stylesheet" />*@
+<link href="~/Content/bootstrap-multiselect.css" rel="stylesheet" />
+<script src="~/Scripts/jquery-2.1.3.min.js"></script>
+@*<script src="~/Scripts/bootstrap.min.js"></script>*@
+<script src="~/Scripts/bootstrap-multiselect.js"></script>
 <style>
     #mydiv {
         position: absolute;
@@ -65,7 +71,8 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Theme</label>                                                                       
-                                    @Html.DropDownListFor(m => m.Themes_Id, new SelectList(Model.ThemeViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.SelectedThemes_Id, new MultiSelectList(Model.ThemeViewModels, "Id", "Name"), new { @class = "form-control" })
+                                   
                                 </div>
                                 <div class="form-group">
                                     <label>Business Group</label>
@@ -167,8 +174,8 @@
 }
 </div>
 
-<script src="~/Scripts/jquery-1.10.2.intellisense.js"></script>
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+@*<script src="~/Scripts/jquery-1.10.2.intellisense.js"></script>*@
+@*<script src="~/Scripts/jquery-1.10.2.min.js"></script>*@
 <link href="~/Content/datepicker3.css" rel="stylesheet" />
 <script src="~/Content/bootstrap-datepicker.js"></script>
 
@@ -213,6 +220,12 @@
     //$('#EndDate').datepicker({
     //    autoclose: true
     //});
+</script>
+
+    <script type="text/javascript">
+    $(document).ready(function() {
+        $('#SelectedThemes_Id').multiselect();
+    });
 </script>
 
 
