--- a/MRM/Views/ChildCampaign/ChildCampaign.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaign.cshtml
@@ -1,7 +1,11 @@
-﻿@model MRM.Model.ChildCampaignViewModel
+﻿@model MRM.ViewModel.ChildCampaignViewModel
 @{
     ViewBag.Title = "ChildCampaign";
 }
+
+
+
+<script src="~/Scripts/jquery-2.1.3.min.js"></script>
 
 <div>
 @*@using (Html.BeginForm("ChildCampaign", "ChildCampaign", FormMethod.Post, new { id = "myform" }))*@
@@ -24,7 +28,7 @@
 
                                 <div class="form-group">
                                     <label>Master Campaign</label>
-                                    @Html.DropDownListFor(m => m.MasterViewModels, new SelectList(Model.MasterViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.DropDownListFor(m => m.MasterViewModels, new SelectList(Model.MasterViewModels, "Id", "Name"), new { @class = "form-control"})
                                 </div>
                                 <div class="form-group">
                                     <label>BG Led</label>
@@ -36,11 +40,11 @@
                                 </div>
                                 <div class="form-group">
                                     <label>Business Group*</label>
-                                    @Html.DropDownListFor(m => m.BusinessGroups_Id, new SelectList(Model.BusinessGroupViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.BusinessGroups_Id, new MultiSelectList(Model.BusinessGroupViewModels, "Id", "Name", Model.BusinessGroups_Id), new { @class = "mr-mulsl form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Business Line*</label>
-                                    @Html.DropDownListFor(m => m.BusinessLines_Id, new SelectList(Model.BusinessLineViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.BusinessLines_Id, new MultiSelectList(Model.BusinessLineViewModels, "Id", "Name", Model.BusinessLines_Id), new { @class = "mr-mulsl form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Status</label>
@@ -77,23 +81,23 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Theme</label>
-                                    @Html.DropDownListFor(m => m.Themes_Id, new SelectList(Model.ThemeViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.Themes_Id, new MultiSelectList(Model.ThemeViewModels, "Id", "Name", Model.Themes_Id), new { @class = "mr-mulsl form-control" })
                                 </div>
                                <div class="form-group">
                                    <div class="col-md-6 form-group" style="margin-left:-14px">
                                        <label>Segment*</label>
-                                       @Html.DropDownListFor(m => m.Segments_Id, new SelectList(Model.SegmentViewModels, "Id", "Name"), new { @class = "form-control" })
+                                       @Html.ListBoxFor(m => m.Segments_Id, new MultiSelectList(Model.SegmentViewModels, "Id", "Name", Model.Segments_Id), new { @class = "mr-mulsl form-control" })
                                    </div>
                                    <div class="col-md-6 form-group">
                                        <label>Industry*</label>
-                                       @Html.DropDownListFor(m => m.Industries_Id, new SelectList(Model.IndustryViewModels, "Id", "Name"), new { @class = "form-control" })
+                                       @Html.ListBoxFor(m => m.Industries_Id, new MultiSelectList(Model.IndustryViewModels, "Id", "Name", Model.Industries_Id), new { @class = "mr-mulsl form-control" })
                                    </div>
                                     </div>                              
                                 <div class="form-group">
                                     <div class="col-md-6" style="margin-left:-14px"></div>
                                     <div class="col-md-6">
                                     <label>Geography</label>
-                                    @Html.DropDownListFor(m => m.Geographys_Id, new SelectList(Model.GeographyViewModels, "Id", "Name"), new { @class = "form-control" })
+                                        @Html.DropDownListFor(m => m.Geographys_Id, new MultiSelectList(Model.GeographyViewModels, "Id", "Name", Model.Geographys_Id), new { @class = "mr-mulsl form-control" })
                                     </div>
                                   
                                 </div>
@@ -167,34 +171,46 @@
 }
 </div>
 
-<script src="~/Scripts/jquery-1.10.2.intellisense.js"></script>
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+@*<script src="~/Scripts/jquery-1.10.2.intellisense.js"></script>
+<script src="~/Scripts/jquery-1.10.2.min.js"></script>*@
 <link href="~/Content/datepicker3.css" rel="stylesheet" />
 <script src="~/Content/bootstrap-datepicker.js"></script>
 <script>
 
-//    $(document).ready(function () {
-//        var model={IndustryViewModels: $("#IndustryViewModels : selected").val()}
+    $(document).ready(function () {
+        $(document).on("change", "#MasterViewModels", function (e) {
+            var masterId = $(this).find(":selected").val();
 
-//    $("#btnsubmit").click(function (e) {
-//        $.ajax({
-//        type: 'post',
-//        dataType: 'json',
-//        url: 'http://localhost:53263/ChildCampaign/Save',
-//        data: json.stringfy(model),
-//        success: function (data) {
-//            {
-//                alert(data);
-//            }
-//    },
-//});
-//    });
-//});
+            if (masterId != 0) {
+                window.location.href = '/ChildCampaign/ChildCampaign?id=' + masterId + '&_=' + (new Date()).getTime();
+                //$.ajax({
+                //    type: 'post',
+                //    dataType: 'json',
+                //    url: '/ChildCampaign/ChildCampaign?id=' + masterId + '&_=' + (new Date()).getTime(),
+                //    success: function (data) {
+                //        {
+                //            debugger
+                //            alert(data);
+                //            //$('#maindiv').html(data);
+                //        }
+                //    },
+                //});
+            }
+
+            
+        });
+        
+    });
 
     $('#StartDate').datepicker();
     $('#EndDate').datepicker();
 </script>
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('.mr-mulsl').multiselect();
 
+    });
+</script>
 
 <style>
     fieldset {
