--- a/MRM/Views/MasterCampaign/MasterCampaign.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaign.cshtml
@@ -1,4 +1,4 @@
-﻿@model MRM.Model.MasterCampaignViewModel
+﻿@model MRM.ViewModel.MasterCampaignViewModel
 
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
@@ -6,11 +6,10 @@
    // var val = Json.Encode(Model);
 }
 
-@*<link href="~/Content/bootstrap.min.css" rel="stylesheet" />*@
-<link href="~/Content/bootstrap-multiselect.css" rel="stylesheet" />
+
+
 <script src="~/Scripts/jquery-2.1.3.min.js"></script>
-@*<script src="~/Scripts/bootstrap.min.js"></script>*@
-<script src="~/Scripts/bootstrap-multiselect.js"></script>
+
 <style>
     #mydiv {
         position: absolute;
@@ -71,28 +70,27 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Theme</label>                                                                       
-                                    @Html.ListBoxFor(m => m.SelectedThemes_Id, new MultiSelectList(Model.ThemeViewModels, "Id", "Name"), new { @class = "form-control" })
-                                   
+                                    @Html.ListBoxFor(m => m.Themes_Id, new MultiSelectList(Model.ThemeViewModels, "Id", "Name",Model.Themes_Id), new { @class = "mr-mulsl form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Business Group</label>
-                                    @Html.DropDownListFor(m => m.BusinessGroups_Id, new SelectList(Model.BusinessGroupViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.BusinessGroups_Id, new MultiSelectList(Model.BusinessGroupViewModels, "Id", "Name",Model.BusinessGroups_Id), new { @class = "mr-mulsl form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Business Line</label>
-                                    @Html.DropDownListFor(m => m.BusinessLines_Id, new SelectList(Model.BusinessLineViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.BusinessLines_Id, new MultiSelectList(Model.BusinessLineViewModels, "Id", "Name",Model.BusinessLines_Id), new { @class = "mr-mulsl form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Segment</label>
-                                    @Html.DropDownListFor(m => m.Segments_Id, new SelectList(Model.SegmentViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.Segments_Id, new MultiSelectList(Model.SegmentViewModels, "Id", "Name",Model.Segments_Id), new { @class = "mr-mulsl form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Industry</label>
-                                    @Html.DropDownListFor(m => m.Industries_Id, new SelectList(Model.IndustryViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.Industries_Id, new MultiSelectList(Model.IndustryViewModels, "Id", "Name",Model.Industries_Id), new { @class = "mr-mulsl form-control" })
                                 </div>                              
                                 <div class="form-group">
                                     <label>Geography</label>
-                                    @Html.DropDownListFor(m => m.Geographys_Id, new SelectList(Model.GeographyViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.Geographys_Id, new MultiSelectList(Model.GeographyViewModels, "Id", "Name",Model.Geographys_Id), new { @class = "mr-mulsl form-control" })
                                 </div>
                             </div>
                             <div class="col-md-6">
@@ -174,8 +172,6 @@
 }
 </div>
 
-@*<script src="~/Scripts/jquery-1.10.2.intellisense.js"></script>*@
-@*<script src="~/Scripts/jquery-1.10.2.min.js"></script>*@
 <link href="~/Content/datepicker3.css" rel="stylesheet" />
 <script src="~/Content/bootstrap-datepicker.js"></script>
 
@@ -205,39 +201,27 @@
 //    });
 
 
-    @*@(Url.Action("SaveMaster", "MasterCampaign"))*@
-    //var element = $('#myform');
-
-    //function esd() {
-    //   element.scope().form.ExpectedStartDate = $("#StartDate").val();
-    //}
-
+ 
     $('#StartDate').datepicker();
     $('#EndDate').datepicker();
-    //$('#StartDate').datepicker({
-    //    autoclose: true
-    //});
-    //$('#EndDate').datepicker({
-    //    autoclose: true
-    //});
+   
 </script>
 
     <script type="text/javascript">
     $(document).ready(function() {
-        $('#SelectedThemes_Id').multiselect();
+        $('.mr-mulsl').multiselect();
+      
+       
     });
 </script>
 
 
 
-
-
-
-
-
-
 <style>
-
+    .mr-mulsl {
+    
+    width:20px!important;
+    }
     fieldset {
     border: 1px solid #DDD;
     padding: 0 1.4em 1.4em 1.4em;
@@ -249,3 +233,4 @@ legend {
     font-weight: bold;
 }
 </style>
+
