--- a/MRM/Views/TacticCampaign/TacticCampaign.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaign.cshtml
@@ -1,8 +1,9 @@
-﻿@model MRM.Model.TacticCampaignViewModel
+﻿@model MRM.ViewModel.TacticCampaignViewModel
 @{
     ViewBag.Title = "TacticCampaign";
 }
 
+<script src="~/Scripts/jquery-2.1.3.min.js"></script>
 <div>
 @using (Ajax.BeginForm("Save", "TacticCampaign", new AjaxOptions { UpdateTargetId = "divInterestDeatils" }))
 { 
@@ -25,28 +26,28 @@
                             <div class="col-md-6">
                                 <div class="form-group">
                                     <label>Theme</label>
-                                    @Html.DropDownListFor(m => m.Themes_Id, new SelectList(Model.ThemeViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.Themes_Id, new MultiSelectList(Model.ThemeViewModels, "Id", "Name"), new { @class = "mr-mulsl form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Business Group*</label>
-                                    @Html.DropDownListFor(m => m.BusinessGroups_Id, new SelectList(Model.BusinessGroupViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.BusinessGroups_Id, new MultiSelectList(Model.BusinessGroupViewModels, "Id", "Name"), new { @class = "mr-mulsl form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Business Line*</label>
-                                    @Html.DropDownListFor(m => m.BusinessLines_Id, new SelectList(Model.BusinessLineViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.BusinessLines_Id, new MultiSelectList(Model.BusinessLineViewModels, "Id", "Name"), new { @class = "mr-mulsl form-control" })
                                 </div>
                                 <!-- /.form-group -->
                                 <div class="form-group">
                                     <label>Segment*</label>
-                                    @Html.DropDownListFor(m => m.Segments_Id, new SelectList(Model.SegmentViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.Segments_Id, new MultiSelectList(Model.SegmentViewModels, "Id", "Name"), new { @class = "mr-mulsl form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Industry*</label>
-                                    @Html.DropDownListFor(m => m.Industries_Id, new SelectList(Model.IndustryViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.Industries_Id, new MultiSelectList(Model.IndustryViewModels, "Id", "Name"), new { @class = "mr-mulsl form-control" })
                                 </div>                              
                                 <div class="form-group">
                                     <label>Geography*</label>
-                                    @Html.DropDownListFor(m => m.Geographys_Id, new SelectList(Model.GeographyViewModels, "Id", "Name"), new { @class = "form-control" })
+                                    @Html.ListBoxFor(m => m.Geographys_Id, new MultiSelectList(Model.GeographyViewModels, "Id", "Name"), new { @class = "mr-mulsl form-control" })
                                 </div>
                                 <div class="form-group">
                                     <label>Sub Champaign*</label>
@@ -135,8 +136,7 @@
 }
 </div>
 
-<script src="~/Scripts/jquery-1.10.2.intellisense.js"></script>
-<script src="~/Scripts/jquery-1.10.2.min.js"></script>
+
 <link href="~/Content/datepicker3.css" rel="stylesheet" />
 <script src="~/Content/bootstrap-datepicker.js"></script>
 
@@ -177,3 +177,10 @@
         font-weight: bold;
     }
 </style>
+<script type="text/javascript">
+    $(document).ready(function() {
+        $('.mr-mulsl').multiselect();
+
+
+    });
+</script>
