multi select implementation and other business logic apply on all forms

--- a/MRM/Views/MasterCampaign/MasterCampaign.cshtml
+++ b/MRM/Views/MasterCampaign/MasterCampaign.cshtml
@@ -209,7 +209,9 @@
 
     <script type="text/javascript">
     $(document).ready(function() {
-        $('.mr-mulsl').multiselect();
+        $('.mr-mulsl').multiselect({
+            buttonWidth: '52%'
+        });
       
        
     });
