--- a/MRM/Views/Shared/_Layout.cshtml
+++ b/MRM/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <h1 style="color:#fff">MRM</h1>
+                <h1 style="color:#fff">@Html.ActionLink("MRM", "Index", "MasterCampaign", new { @style= "color:#fff; text-decoration:none" })</h1>
             </div>
             <div class="navbar-collapse collapse">
                 @*<ul class="nav navbar-nav" style="display:@ViewBag.Menu">
