--- a/MRM/Views/ChildCampaign/ChildCampaign.cshtml
+++ b/MRM/Views/ChildCampaign/ChildCampaign.cshtml
@@ -56,11 +56,11 @@
 
                                 </div>
                                 <div class="form-group">
-                                    <label>Sub Champaign*</label>
+                                    <label>Sub Campaign*</label>
                                     @Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
                                 </div>
                                 <div class="form-group">
-                                    <label>Sub Champaign Description</label>
+                                    <label>Sub Campaign Description</label>
                                     @Html.TextAreaFor(m => m.CampaignDescription, new { @class = "form-control" })
                                 </div>
                                 <div class="form-group">
@@ -97,7 +97,7 @@
                                     <div class="col-md-6" style="margin-left:-14px"></div>
                                     <div class="col-md-6">
                                     <label>Geography</label>
-                                        @Html.DropDownListFor(m => m.Geographys_Id, new MultiSelectList(Model.GeographyViewModels, "Id", "Name", Model.Geographys_Id), new { @class = "mr-mulsl form-control" })
+                                        @Html.ListBoxFor(m => m.Geographys_Id, new MultiSelectList(Model.GeographyViewModels, "Id", "Name", Model.Geographys_Id), new { @class = "mr-mulsl form-control" })
                                     </div>
                                   
                                 </div>
@@ -207,7 +207,9 @@
 </script>
 <script type="text/javascript">
     $(document).ready(function() {
-        $('.mr-mulsl').multiselect();
+        $('.mr-mulsl').multiselect({
+            buttonWidth: '52%'
+        });
 
     });
 </script>
