--- a/MRM/Views/ChildList/ChildList.cshtml
+++ b/MRM/Views/ChildList/ChildList.cshtml
@@ -27,12 +27,12 @@
         @using (Html.BeginForm("ChildList", "ChildList", FormMethod.Post))
         {
             <fieldset>
-                <legend>Sub Campaign Details </legend>
+                <legend>Sub Campaign Details</legend>
                 <div class="table-responsive">
                     <table cellpadding="0" cellspacing="0" class="table table-bordered">
                         <thead class="header-background-color">
                             <tr>
-                                <th>ID</th>
+                                <th>Sub Campaign ID</th>
                                 <th>Name</th>
                                 <th>Campaign Desc.</th>
                                 <th>Status</th>
@@ -45,7 +45,7 @@
                         {
                             <tbody>
                                 <tr>
-                                    <td>@item.Id</td>
+                                    <td>sub-camp-@item.Id</td>
                                     <td>@Html.ActionLink((item.Name), "TacticListById", "TacticList", new { Id = item.Id }, null)</td>
                                     <td>@item.CampaignDescription</td>
                                     <td>@item.Status</td>
