--- a/MRM/Views/MasterCampaign/Index.cshtml
+++ b/MRM/Views/MasterCampaign/Index.cshtml
@@ -7,9 +7,8 @@
     <h2>Welcome MRM Campaign</h2>
 
     <fieldset>
-        <span style="font-family:'Times New Roman', Times, serif;font-size:medium;">Secrevit fontes liquidum locoque pronaque?<br />
-                Illas semine campoque declivia oppida corpora nam inter fuit discordia tellus solidumque iunctarum erat: quae
-                terrenae ubi rerum recessit iudicis aestu fixo</span>
+        <span style="font-family:'Times New Roman', Times, serif;font-size:medium;">MRM description.<br />
+                </span>
         
     </fieldset>
     <fieldset>
@@ -19,19 +18,19 @@
                 <strong>Danger!</strong> @TempData["mastercount"].ToString()
             </div>
         }
-        <div class="row" style="padding-top:15px">
+        <div class="row">
             <div class="col-md-3"><label>Master Campaign</label></div>
             <div class="col-md-2"><input type="button" class="btn btn-block btn-primary btn-sm" value="Create" onclick="location.href='@Url.Action("MasterCampaign", "MasterCampaign")'" /></div>
             @*<div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Edit" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" /></div>*@
             <div class="col-md-2"><input type="button" class="btn btn-block btn-primary btn-sm" value="View All" onclick="location.href='@Url.Action("MasterList", "MasterList")'" /></div>
         </div>
-        <div class="row">
+        <div class="row" style="padding-top:15px">
             <div class="col-md-3"><label>Sub Campaign</label></div>
             <div class="col-md-2"><input type="button" class="btn btn-block btn-primary btn-sm" value="Create" onclick="location.href='@Url.Action("ChildCampaign", "ChildCampaign")'" /></div>
             @*<div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Edit" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" /></div>*@
             <div class="col-md-2"><input type="button" class="btn btn-block btn-primary btn-sm" value="View All" onclick="location.href='@Url.Action("ChildList", "ChildList")'" /></div>
         </div>
-        <div class="row">
+        <div class="row" style="padding-top:15px">
             <div class="col-md-3"><label>Tactic</label></div>
             <div class="col-md-2"><input type="button" class="btn btn-block btn-primary btn-sm" value="Create" onclick="location.href='@Url.Action("TacticCampaign", "TacticCampaign")'" /></div>
             @*<div class="col-md-2 btnpadding"><input type="button" class="btn btn-block btn-primary btn-sm" value="Edit" onclick="location.href='@Url.Action("Index", "MasterCampaign")'" /></div>*@
