--- a/MRM/Views/TacticCampaign/TacticCampaign.cshtml
+++ b/MRM/Views/TacticCampaign/TacticCampaign.cshtml
@@ -25,6 +25,10 @@
                             <legend>Tactic</legend>
                             <div class="col-md-6">
                                 <div class="form-group">
+                                    <label>Sub Campaign*</label>
+                                    @Html.DropDownListFor(m => m.ChildCampaignViewModels, new SelectList(Model.ChildCampaignViewModels, "Id", "Name"), new { @class = "form-control" })
+                                </div>
+                                <div class="form-group">
                                     <label>Theme</label>
                                     @Html.ListBoxFor(m => m.Themes_Id, new MultiSelectList(Model.ThemeViewModels, "Id", "Name"), new { @class = "mr-mulsl form-control" })
                                 </div>
@@ -49,10 +53,7 @@
                                     <label>Geography*</label>
                                     @Html.ListBoxFor(m => m.Geographys_Id, new MultiSelectList(Model.GeographyViewModels, "Id", "Name"), new { @class = "mr-mulsl form-control" })
                                 </div>
-                                <div class="form-group">
-                                    <label>Sub Champaign*</label>
-                                    @Html.DropDownListFor(m => m.ChildCampaignViewModels, new SelectList(Model.ChildCampaignViewModels, "Id", "Name"), new { @class = "form-control" })
-                                </div>
+                               
                                 <div class="form-group">
                                     <label>Year*</label>
                                     @Html.TextBoxFor(m => m.Year, new { @maxlength = "4", @class = "form-control" })
@@ -141,22 +142,18 @@
 <script src="~/Content/bootstrap-datepicker.js"></script>
 
 <script>
+    $(document).ready(function () {
+        $(document).on("change", "#ChildCampaignViewModels", function (e) {
+            var childId = $(this).find(":selected").val();
 
-//$(document).ready(function () {
-//    $("#btnsubmit").click(function (e) {
-//        $.ajax({
-//        type: 'post',
-//        dataType: 'json',
-//        url: 'http://localhost:53263/TacticCampaign/Save',
-//        data: $("#myform").serialize(),
-//        success: function (data) {
-//            {
-//                alert(data);
-//            }
-//    },
-//});
-//    });
-//});
+            if (childId != 0) {
+                window.location.href = '/TacticCampaign/TacticCampaign?id=' + childId + '&_=' + (new Date()).getTime();
+            }
+
+
+        });
+
+    });
 
 
     $('#StartDate').datepicker();
@@ -179,8 +176,13 @@
 </style>
 <script type="text/javascript">
     $(document).ready(function() {
-        $('.mr-mulsl').multiselect();
-
+       // $('.mr-mulsl').multiselect();
+        $('.mr-mulsl').multiselect({
+            buttonWidth: '52%'
+        });
 
     });
+
+
+   
 </script>
