--- a/MRM/Views/TacticList/TacticList.cshtml
+++ b/MRM/Views/TacticList/TacticList.cshtml
@@ -32,7 +32,7 @@
                     <table cellpadding="0" cellspacing="0" class="table table-bordered">
                         <thead class="header-background-color">
                             <tr>
-                                <th>ID</th>
+                                <th>Tactic Campaign ID</th>
                                 <th>Name</th>
                                 <th>Campaign Desc.</th>
                                 <th>Status</th>
@@ -45,7 +45,7 @@
                 {
                             <tbody>
                                 <tr>
-                                    <td>@item.Id</td>
+                                    <td>tac-camp-@item.Id</td>
                                     <td>@item.Name</td>
                                     <td>@item.TacticDescription</td>
                                     <td>@item.Status</td>
